# linnote

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install.sh  linnote.desktop  main.cpp
.github/workflows/: deploy-guide.yml
config/: version.h.in
core/: CurrencyConverter.cpp  CurrencyConverter.h  ExampleNotes.cpp  ExampleNotes.h  MathEvaluator.cpp  MathEvaluator.h  Note.cpp  Note.h  NoteManager.cpp  NoteManager.h  NoteMode.h  OcrHelper.cpp  OcrHelper.h  Settings.cpp  Settings.h  SlashCommand.cpp  SlashCommand.h  TextAnalyzer.cpp  TextAnalyzer.h  Theme.cpp  Theme.h  Timer.cpp  Timer.h  UnitConverter.cpp  UnitConverter.h  UpdateChecker.cpp  UpdateChecker.h  UrlShortener.cpp  UrlShortener.h
docs/: COMPARISON.md  USER_GUIDE.md  index.html  robots.txt  sitemap.xml  smoke-test-kde.md  test-report.html
docs/guide/: 404.html  _sidebar.md  calculator.html  calculator.md  commands.html  commands.md  conversions.html  conversions.md  getting-started.html  getting-started.md  hashmap.json  home.md  index.html  index.md  modes.html  modes.md  ocr.html  ocr.md  package-lock.json  package.json  security.html  security.md  settings.html  settings.md  shortcuts.html  shortcuts.md  sitemap.xml  timer.html  timer.md  troubleshooting.html  troubleshooting.md
docs/guide/.vitepress/: config.mjs
docs/guide/.vitepress/theme/: custom.css  index.js
docs/guide/assets/: app.BFvz4opP.js  app.VhXZ7HPR.js  calculator.md.DXCK1G5B.js  calculator.md.DXCK1G5B.lean.js  commands.md.B_pmBrwL.js  commands.md.B_pmBrwL.lean.js  conversions.md.CRh8Yr_X.js  conversions.md.CRh8Yr_X.lean.js  getting-started.md.B74mrFKq.js  getting-started.md.B74mrFKq.lean.js  index.md.DDsVFNd0.js  index.md.DDsVFNd0.lean.js  modes.md.BzsmLaHi.js  modes.md.BzsmLaHi.lean.js  ocr.md.C7HTcjYw.js  ocr.md.C7HTcjYw.lean.js  security.md.B9eY9VC8.js  security.md.B9eY9VC8.lean.js  settings.md.BcCyhkWk.js  settings.md.BcCyhkWk.lean.js  shortcuts.md.BWStaL5_.js  shortcuts.md.BWStaL5_.lean.js  style.CfQbE7vi.css  timer.md.D0tE5IGP.js  timer.md.D0tE5IGP.lean.js  troubleshooting.md.DmK6EJOW.js  troubleshooting.md.DmK6EJOW.lean.js
docs/guide/assets/chunks/: @localSearchIndexroot.BrpZHN41.js  @localSearchIndexroot.X9gz4AQn.js  VPLocalSearchBox.B7gWlI0-.js  VPLocalSearchBox.Bsqz-LS4.js  framework.CoHhbRn3.js  theme.Tfeb3kMV.js  theme.huERV_Nq.js
integration/: ClipboardManager.cpp  ClipboardManager.h  DBusService.cpp  DBusService.h  DesktopHelper.h  PortalShortcuts.cpp  PortalShortcuts.h
packaging/aur/: .SRCINFO  PKGBUILD  README.md
resources/: resources.qrc
storage/: BackupManager.cpp  BackupManager.h  Crypto.cpp  Crypto.h  Export.cpp  Export.h  NoteStorage.cpp  NoteStorage.h  SqliteStorage.cpp  SqliteStorage.h
tests/: CMakeLists.txt
tests/core/: test_currency.cpp  test_matheval.cpp  test_settings.cpp  test_textanalyzer.cpp  test_unitconv.cpp
tests/storage/: test_crypto.cpp  test_sqlite.cpp
ui/: CodeHighlighter.cpp  CodeHighlighter.h  CommandPopup.cpp  CommandPopup.h  ConfettiWidget.cpp  ConfettiWidget.h  FirstRunDialog.cpp  FirstRunDialog.h  MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  ModeHelper.cpp  ModeHelper.h  ModeSelector.cpp  ModeSelector.h  NoteEditor.cpp  NoteEditor.h  PageSelector.cpp  PageSelector.h  PasswordDialog.cpp  PasswordDialog.h  SearchBar.cpp  SearchBar.h  SearchModal.cpp  SearchModal.h  SettingsDialog.cpp  SettingsDialog.h  TrayIcon.cpp  TrayIcon.h
website/: CNAME  index.html
